1 change by Nuxt Studio

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -3,14 +3,14 @@ navigation:
   title: Home
 ---
 
-# Content Wind
+# Content ind
 
 A lightweight Nuxt theme to build a Markdown driven website, based on [Nuxt Content](https://content.nuxt.com), [TailwindCSS](https://tailwindcss.com) and [Iconify](https://iconify.design) ✨
 
 ## Features
 
-- Write pages in Markdown
 - Use [layouts](https://nuxt.com/docs/guide/directory-structure/layouts) in Markdown pages
+- Write pages in Markdown
 - Enjoy meta tag generation
 - Generated navigation from pages
 - Leverage TailwindCSS Typography
